completed base class assignment added update methods to GradeCategory

--- a/GradeSuccess/GradeSuccess.csproj
+++ b/GradeSuccess/GradeSuccess.csproj
@@ -63,6 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Assignment.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="GradeCategory.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
