--- a/GradeSuccess/GradeSuccess.csproj
+++ b/GradeSuccess/GradeSuccess.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ClassManager.cs" />
     <Compile Include="SchoolClass.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
